3rd homework (React app design)

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: crimson;
+    background-image: url("../backgroundpic.jpg");
     height: 150px;
     display: flex;
     justify-content: space-between;
