--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -9,3 +9,15 @@
     height: 50px;
     margin: 50px;
 }
+
+.redButton {
+    background-color: #ff0000; /* Red */
+    border: none;
+    color: white;
+    padding: 10px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: bold;
+}
